@startuml biblioteca
'https://plantuml.com/class-diagram
'Una aplicación necesita tener información sobre una biblioteca. Realiza el diagrama de clases y
 'añade los métodos necesarios para realizar el préstamo y devolución de libros.
 'La biblioteca tiene copias de libros. Estos últimos se caracterizan por su nombre, tipo (novela,
 'teatro, poesía, ensayo), editorial, año y autor.
 'Los autores se caracterizan por su nombre, nacionalidad y fecha de nacimiento.
 'Cada copia tiene un identificador, y puede estar en la biblioteca, prestada, con retraso o en
 'reparación.
 'Los lectores pueden tener un máximo de 3 libros en préstamo.
 'Cada libro se presta un máximo de 30 días, por cada día de retraso se impone una multa de dos días
 'sin posibilidad de coger un nuevo libro.
left to right direction

Libro -- Copia
Copia -- Lectores
Lectores -- Multa
Libro -- Autores
(Copia, Lectores) ... Prestamo


class Autores {
-nombre : String
-nacionalidad : String
-fechaNacimiento : Date
}

class Libro {
titulo : String
editorial : String
year : Integer
tipo : Genero

}

class Prestamo{
-inicio : Date
-fin : Date
}

class Lectores{
-numero : Integer
-nombre : String
-direccion : String
-telefono : String

}

class Copia{
-referencia : Integer
-estado : EstadoCopia
}

class Multa{
-inicio : Date
-fin : Date
}

enum Genero <<enumeration>> {
novela
teatro
poesia
ensayo
}

enum EstadoCopia <<enumeration>>{
prestado
retraso
biblioteca
reparacion
}

Multa"0..1" - Lectores
Copia "0..3" - "0..1" Lectores
Copia "1..*" - Libro
Libro "1..*" - Autores
( Copia, Lectores) ... Prestamo : recibe

@enduml